made changes to pipeline, category and upwork

--- a/configs/upwork.config
+++ b/configs/upwork.config
@@ -4,11 +4,12 @@
     "part_url":"https://www.upwork.com",
 
     "category_results": '//ul[@id="category"]//li',
-    "category_name":'a/text()',
+    "category_name":'a/text()[2]',
     "category_path":'a/@href',
 
-    "subcategory_results": '/*[@data-ng-if="subcategoriesController.isSubcategoryVisible()"]/ul//li',
-    "subcategory_name":'a/text()',
+
+    "subcategory_results": "//*[contains(@class, 'subcategories-filter')]//ul//li",
+    "subcategory_name":'a/text()[2]',
     "subcategory_path":'a/@href',
     "output_filename": "Upwork_cat.config"
 }
